--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "@types/react-dom": "^18",
     "eslint-config-next": "14.2.5",
     "typescript": "5.6.0-beta"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "next@14.2.5": "patches/next@14.2.5.patch"
+    }
   }
 }
