--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
     "start": "next start",
-    "lint": "next lint"
+    "deploy": "sst deploy"
   },
   "dependencies": {
     "eslint": "^8.57.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sst": "ion"
   },
   "devDependencies": {
     "@types/node": "^20",
